--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -4,8 +4,8 @@
 		"private": true,
 		"sideEffects": false,
 		"engines": {
-			"node": ">=14.17 <=16.8",
-			"yarn": "~1.22"
+				"node": ">=14.17 <=16.8",
+				"yarn": "~1.22"
 		},
 		"dependencies": {
 				"@loadable/component": "^5.15.0",
@@ -83,6 +83,9 @@
 				"test:cypress:open": "start-server-and-test server:test http://localhost:9009 cypress:open",
 				"test:cypress:run": "start-server-and-test server:test http://localhost:9009 cypress:run",
 				"documentation": "bin/checkDocumentation.js check",
-				"documentation:fix": "bin/checkDocumentation.js check --fix"
+				"documentation:fix": "bin/checkDocumentation.js check --fix",
+				"translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
+				"translation:fix": "yarn run translation --fix",
+				"accessibility": "bin/checkAccessibility.js check"
 		}
 }
