--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables: &global_variables
   IMAGE_APP_NAME: "make-front"
   IMAGE_APP_TARGET: "app-production"
   IMAGE_APP_PATH: "apps/front/Dockerfile"
-  NODE_IMAGE: "node:16.8-alpine"
+  NODE_IMAGE: "node:16.9-alpine"
   YARN_VERSION: "1.22.5"
 
 cache:
@@ -50,6 +50,7 @@ test:
     - node -v
     - yarn install --check-files
     - yarn workspace @make.org/front translation
+    - yarn workspace @make.org/front documentation
     - yarn jest --coverage
   artifacts:
     expire_in: 1 week
