--- a/store/package.json
+++ b/store/package.json
@@ -14,5 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "browserslist": {}
+  "browserslist": {},
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
