--- a/types/package.json
+++ b/types/package.json
@@ -7,5 +7,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.2"
   },
-  "browserslist": {}
+  "browserslist": {},
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
