--- a/utils/package.json
+++ b/utils/package.json
@@ -33,6 +33,9 @@
     "winston": "~3.3.3"
   },
   "devDependencies": {
-    "mockdate": "^3.0.5"
+    "core-js": "^3.16.2",
+    "mockdate": "^3.0.5",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
