refactor(global): refactor ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ variables: &global_variables
   IMAGE_WIDGET_NAME: "make-widget-runner"
   IMAGE_WIDGET_TARGET: "widget-production"
   IMAGE_WIDGET_PATH: "apps/widget/Dockerfile"
-  NODE_IMAGE: "node:16.9-alpine"
   YARN_VERSION: "1.22.5"
 
 cache:
@@ -22,36 +21,29 @@ stages:
   - build
   - deploy
   
-lint:
+.check:
   stage: check
   except: 
     - production
-  image: $NODE_IMAGE
-  before_script:
+  image: "node:16.9-alpine"
+  before_script: 
+    - node -v
     - export YARN_VERSION="$YARN_VERSION"
-  script:
     - yarn install --check-files
+
+lint:
+  extends: .check
+  script:  
     - yarn eslint ./
 
 check-types:
-  stage: check
-  except: 
-    - production
-  image: $NODE_IMAGE
-  before_script:
-    - export YARN_VERSION="$YARN_VERSION"
+  extends: .check
   script:
-    - yarn install --check-files
     - yarn tsc --noEmit
 
 test:
-  stage: check
-  image: $NODE_IMAGE
-  before_script:
-    - export YARN_VERSION="$YARN_VERSION"
+  extends: .check
   script:    
-    - node -v
-    - yarn install --check-files
     - yarn workspace @make.org/front translation
     - yarn workspace @make.org/front documentation
     - yarn jest --coverage
@@ -60,6 +52,16 @@ test:
     when: always
     paths:
       - coverage
+
+jscpd:
+  extends: .check
+  script:
+    - yarn jscpd
+  artifacts:
+    expire_in: 1 week
+    when: always
+    paths:
+      - reports
 
 e2e-app:
   variables:
@@ -85,35 +87,27 @@ e2e-app:
       - cypress/videos
       - cypress/coverage
 
-jscpd:
-  stage: check
-  except: 
-    - production
-  image: $NODE_IMAGE
-  before_script:
-    - export YARN_VERSION="$YARN_VERSION"
-  script:
-    - yarn install --check-files
-    - yarn jscpd
-  artifacts:
-    expire_in: 1 week
-    when: always
-    paths:
-      - reports
   
-build-app:
+
+.build:
   stage: build
   tags:
     - docker
-  before_script:
+  except: 
+    - production
+  when: manual
+  before_script: 
     - export IMAGE_VERSION=`git rev-parse --short=10 HEAD`
     - mkdir -p /var/lib/docker
     - mount -t tmpfs -o size=12G tmpfs /var/lib/docker
     - if [ ! -e /var/run/docker.sock ]; then DOCKER_DRIVER=overlay2 dockerd & fi
     - until docker ps; do echo "waiting for docker to be up..."; sleep 0.5; done
     - docker login "https://$NEXUS_URL" --username "$NEXUS_USER" --password "$NEXUS_PASSWORD"
-    - echo $(docker pull $NEXUS_URL/$IMAGE_APP_NAME:$IMAGE_VERSION)
+
+build-app:
+  extends: .build
   script:
+    - echo $(docker pull $NEXUS_URL/$IMAGE_APP_NAME:$IMAGE_VERSION)
     - >
       if [[ -z $(docker images -q $NEXUS_URL/$IMAGE_APP_NAME:$IMAGE_VERSION) ]];then
         DOCKER_BUILDKIT=1 docker build --rm -f $IMAGE_APP_PATH -t $NEXUS_URL/$IMAGE_APP_NAME:$IMAGE_VERSION --target $IMAGE_APP_TARGET .
@@ -123,18 +117,9 @@ build-app:
     - docker push $NEXUS_URL/$IMAGE_APP_NAME:$CI_COMMIT_REF_NAME-latest
 
 build-widget:
-  stage: build
-  tags:
-    - docker
-  before_script:
-    - export IMAGE_VERSION=`git rev-parse --short=10 HEAD`
-    - mkdir -p /var/lib/docker
-    - mount -t tmpfs -o size=12G tmpfs /var/lib/docker
-    - if [ ! -e /var/run/docker.sock ]; then DOCKER_DRIVER=overlay2 dockerd & fi
-    - until docker ps; do echo "waiting for docker to be up..."; sleep 0.5; done
-    - docker login "https://$NEXUS_URL" --username "$NEXUS_USER" --password "$NEXUS_PASSWORD"
-    - echo $(docker pull $NEXUS_URL/$IMAGE_WIDGET_NAME:$IMAGE_VERSION)
+  extends: .build
   script:
+    - echo $(docker pull $NEXUS_URL/$IMAGE_WIDGET_NAME:$IMAGE_VERSION)
     - >
       if [[ -z $(docker images -q $NEXUS_URL/$IMAGE_WIDGET_NAME:$IMAGE_VERSION) ]];then
         DOCKER_BUILDKIT=1 docker build --rm -f $IMAGE_WIDGET_PATH -t $NEXUS_URL/$IMAGE_WIDGET_NAME:$IMAGE_VERSION --target $IMAGE_WIDGET_TARGET .
@@ -143,12 +128,16 @@ build-widget:
     - docker tag $NEXUS_URL/$IMAGE_WIDGET_NAME:$IMAGE_VERSION $NEXUS_URL/$IMAGE_WIDGET_NAME:$CI_COMMIT_REF_NAME-latest
     - docker push $NEXUS_URL/$IMAGE_WIDGET_NAME:$CI_COMMIT_REF_NAME-latest
 
-deploy-app-preproduction:
+.deploy-preproduction:
   stage: deploy
   environment:
     name: preproduction
   only:
     - preproduction
+  when: manual
+
+deploy-app-preproduction:
+  extends: .deploy-preproduction
   script:
     - >
       curl -D - -X "POST"
@@ -156,4 +145,15 @@ deploy-app-preproduction:
       -H "Content-Type: application/x-www-form-urlencoded"
       -H "X-Rundeck-Auth-Token: $APP_RUNDECK_PREPROD_TOKEN"
       --data-urlencode "argString=-version $CI_COMMIT_REF_NAME-latest"
-      $APP_RUNDECK_PREPROD_URL/api/16/job/$APP_RUNDECK_PREPROD_JOB_ID/run
+      $RUNDECK_PREPROD_URL/api/16/job/$APP_RUNDECK_PREPROD_JOB_ID/run
+
+deploy-widget-preproduction:
+  extends: .deploy-preproduction
+  script:
+    - >
+      curl -D - -X "POST"
+      -H "Accept: application/json"
+      -H "Content-Type: application/x-www-form-urlencoded"
+      -H "X-Rundeck-Auth-Token: $WIDGET_RUNDECK_PREPROD_TOKEN"
+      --data-urlencode "argString=-version $CI_COMMIT_REF_NAME-latest"
+      $RUNDECK_PREPROD_URL/api/16/job/$WIDGET_RUNDECK_PREPROD_JOB_ID/run
