--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -121,6 +121,7 @@
 				"dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
 				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js",
 				"server": "pm2-runtime start ecosystem.config.js --only app-production",
+				"server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
 				"server:test": "node ../../apimock/server.js & pm2-runtime start ecosystem.config.js --only app-test",
 				"cypress:run": "cypress run -b chrome --headless",
 				"cypress:open": "cypress open",
