fix(global): login & register form fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-/node_modules
-/*/node_modules
-/*/*/node_modules
+/**/node_modules
 /dist
-/*/dist
-/*/*/dist
+/**/dist
 /reports
 /coverage
 .DS_Store
 .env
 yarn-error.log
 lerna-debug.log
-apps/*/cypress/coverage
-apps/*/cypress/screenshots
-apps/*/.nyc_output
+/**/cypress/coverage
+/**/cypress/screenshots
+/**/.nyc_output
+/**/Svg/svgr
