--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -88,6 +88,8 @@
     "build": "webpack --mode production --progress --color --config ./webpack/build.config.js",
     "server": "pm2-runtime start ecosystem.config.js --only widget-production",
     "server:dev": "pm2-runtime start ecosystem.config.js --only widget-dev",
-    "server:test": "node ../../apimock/server.js & pm2-runtime start ecosystem.config.js --only widget-test"
+    "server:test": "node ../../apimock/server.js & pm2-runtime start ecosystem.config.js --only widget-test",
+    "translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
+    "translation:fix": "yarn run translation --fix"
   }
 }
