feat(global): MP-2252 add versions for widget and front

--- a/apps/front/Dockerfile
+++ b/apps/front/Dockerfile
@@ -87,6 +87,9 @@ FROM keymetrics/pm2:16-alpine AS base-production
 
 WORKDIR /usr/app
 
+# git commands are necessary to build /version
+RUN apk --no-cache add git
+
 COPY ["package*.json", "yarn.lock", "./"]
 COPY ["apps/front/package*.json", "./apps/front/"]
 COPY ["api/package*.json", "./api/"]
