--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -85,7 +85,7 @@
   },
   "scripts": {
     "dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
-    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js",
+    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js && node bin/versionBuild.js",
     "server": "pm2-runtime start ecosystem.config.js --only widget-production",
     "server:dev": "pm2-runtime start ecosystem.config.js --only widget-dev",
     "server:test": "node ../../apimock/server.js & pm2-runtime start ecosystem.config.js --only widget-test",
