--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -119,7 +119,7 @@
 		},
 		"scripts": {
 				"dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
-				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js",
+				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js && node bin/versionBuild.js",
 				"server": "pm2-runtime start ecosystem.config.js --only app-production",
 				"server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
 				"server:test": "node ../../apimock/server.js & pm2-runtime start ecosystem.config.js --only app-test",
