--- a/apps/widget/.env.local
+++ b/apps/widget/.env.local
@@ -1,6 +1,20 @@
-HTTPS=true
-HOST=local.makeorg.tech
+# Use local certificates. Only for local env. 
+LOCAL_USE_CERTS=true
+
+# DOMAIN for cookie rewrite. Only for local env. 
+LOCAL_COOKIES_DOMAIN_REWRITE=local.makeorg.tech
+
+# API url to use by server proxy on /backend. Only for local and test env.
+LOCAL_PROXY_API_URL=https://api.preprod.makeorg.tech
+
+# Widget config URL (will be removed in a future release). Only for production env.
+CONFIG_URL=
+
+# PORT
 PORT=3000
+
+# API url
 API_URL=https://local.makeorg.tech:3000/backend
-PROXY_TARGET_API_URL=https://api.preprod.makeorg.tech
+
+# Front url
 FRONT_URL=https://local.makeorg.tech:3000
